# peless.git-dpm

./: AUTHORS  COPYING  ChangeLog  INSTALL  INTERNATIONALIZATION  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  gmore.cc  gmore.hh  inittime.hh  internat.hh  peless.1  peless.cc  peless.desktop.in.in  peless.spec.OpenSuSE-10.2  peless.spec.data.OpenSuSE-10.2  peless.spec.data.fc6  peless.spec.data.man2007  peless.spec.fc6  peless.spec.fixed  peless.spec.man2007  peless.spec.version  peless.xpm  peless_1.145.orig.tar.gz.delta  peless_1.145.orig.tar.gz.id  peless_1.156.orig.tar.gz.delta  peless_1.156.orig.tar.gz.id  peless_1.193.orig.tar.bz2.delta  peless_1.193.orig.tar.bz2.id  peless_1.199.orig.tar.gz.delta  peless_1.199.orig.tar.gz.id  peless_1.200.orig.tar.gz.delta  peless_1.200.orig.tar.gz.id  peless_1.211.orig.tar.bz2.delta  (+13 more)
debian/: .git-dpm  changelog  control  control~  copyright  menu  rules  watch
m4/: empty_dir
po/: ChangeLog  POTFILES.in
